Use older Java version for compatibility